--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ShowData"></activity>
+        <activity android:name=".Gestion.EnviarMostrarGastos"></activity>
+        <activity android:name=".ShowData" />
         <activity android:name=".MostarEventosActivity" />
         <activity android:name=".Gestion.AccionesAdminActivity" />
         <activity android:name=".Gestion.AddFechasTemporada" />
