--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,9 +18,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Gestion.EnviarMostrarGastos"></activity>
+        <activity android:name=".ContactoActivity"></activity>
+        <activity android:name=".Gestion.MostrarReservas" />
+        <activity android:name=".Gestion.EnviarMostrarGastos" />
         <activity android:name=".ShowData" />
-        <activity android:name=".MostarEventosActivity" />
         <activity android:name=".Gestion.AccionesAdminActivity" />
         <activity android:name=".Gestion.AddFechasTemporada" />
         <activity android:name=".ReservasActivity" />
