--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.firebase:firebase-messaging:19.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.zolad:zoominimageview:1.0.0'
 
     //implementation 'com.android.support:recyclerview-v7:28.0.0'
 
