--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".MultimediaActivity"></activity>
         <activity android:name=".ImagesActivity1" />
         <activity android:name=".Gestion.SendImages" />
         <activity android:name=".ImagesActivity" />
